--- a/src/css/_pages/_todomvc.scss
+++ b/src/css/_pages/_todomvc.scss
@@ -5,62 +5,113 @@
 
 	main {
 		width: 100%;
-		padding: 40px;
+		padding: 0;
 	}
 
 	.header {
-		&>a {
+		flex: 0 0 75px;
+		display: flex;
+		align-items: center;
+		padding: 20px;
+
+		.brand {
 			font-size: 13px;
+			font-weight: 900;
+			flex: 1 1 auto;
 		}
+
+		.btn--twitter,
+		.btn--github {
+			font-size: 20px;
+			margin-left: 10px;
+
+			i {
+				color: $foreground;
+				transition: ease-in-out color 300ms;
+			}
+
+			&:hover {
+				i {
+					color: $foreground-primary;
+				}
+			}
+		}
+	}
+
+	.group--form {
+		flex: 0 0 60px;
+		// border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+		box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .2);
+		z-index: 2;
 	}
 
 	.list {
+		flex: 1 1 auto;
 		margin: 0;
 		padding: 0;
 		list-style: none;
-		margin: 0 -30px 40px -30px;
-		padding: 0 30px;
+	}
 
-		&>.list__item {
-			display: flex;
-			align-items: center;
-			min-height: 15px;
-			margin: 0;
-			padding: 20px 0;
-			border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+	.list__item {
+		--accent: $foreground;
 
-			&>.date {
-				flex: 0 1 100px;
-				margin: 0 20px 0 10px;
-				padding: 6px 10px 4px 10px;
-				border-radius: 12px;
-				font-size: 12px;
-				font-weight: 800;
-				line-height: 1;
-				text-align: center;
-				color: #fff;
+		display: flex;
+		align-items: center;
+		min-height: 120px;
+		margin: 0;
+		padding: 20px;
+
+		.title {
+			position: relative;
+			margin-top: 10px;
+			font-size: 28px;
+			font-weight: 800;
+			line-height: 1;
+			text-align: left;
+
+			&:after {
+				content: '';
+				// background-image: url('../img/underline.svg');
+				background-color: black;
+				background-color: var(--accent);
+				background-size: 170px 8px;
+				background-repeat: no-repeat;
+				position: absolute;
+				width: 0;
+				height: 8px;
+				left: -8px;
+				top: 50%;
+				margin-top: -2px;
+				z-index: 1;
+				// mix-blend-mode: multiply;
+				transition: ease-in-out 300ms width;
 			}
 
 		}
+
+		&.done {
+			.title {
+				&:after {
+					width: 170px;
+				}
+			}
+		}
+
+		.date {
+			font-size: 10px;
+			font-weight: 800;
+			line-height: 1;
+			text-align: left;
+			white-space: nowrap;
+			text-transform: uppercase;
+			text-indent: 1px;
+			// color: var(--accent);
+		}
+
 	}
 
 	.btn--toggle {
-		display: inline-flex;
-		flex: 1 0 auto;
-		align-items: center;
-
-		&>i {
-			font-size: 14px;
-			height: 14px;
-			line-height: 1;
-		}
-
-		&>.title {
-			margin: 0 10px;
-			font-size: 16px;
-			font-weight: 800;
-			line-height: 1;
-		}
+		flex: 1 1 auto;
 	}
 
 	.btn--remove {
@@ -72,7 +123,7 @@
 	}
 
 	.btn--add {
-		color: rgba(17, 138, 178, 1);
+		color: $foreground;
 
 		&>i {
 			font-size: 12px;
@@ -80,30 +131,7 @@
 
 		&.disabled {
 			pointer-events: none;
-			color: rgba(17, 138, 178, 0.2);
-		}
-	}
-
-	.footer {
-		display: flex;
-		justify-content: center;
-		margin: 0;
-
-		a {
-			margin-right: 15px;
-
-			i {
-				font-size: 24px;
-				color: rgba(17, 138, 178, 0.4);
-				transition: ease-in-out color 300ms;
-
-			}
-
-			&:hover {
-				i {
-					color: rgba(17, 138, 178, 1);
-				}
-			}
+			color: rgba($foreground, 0.2);
 		}
 	}
 
@@ -113,7 +141,7 @@
 		main {
 			display: flex;
 			flex-direction: column;
-			max-width: 480px;
+			max-width: 375px;
 			height: 70vh;
 			border-radius: 3px;
 			box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.2);
@@ -122,7 +150,6 @@
 
 		.list {
 			flex: 1 1 auto;
-			max-height: calc(100% - 140px);
 			overflow-y: auto;
 		}
 
@@ -135,12 +162,9 @@
 			min-height: 100vh;
 			// height: 100vh;
 			// height: fill-available;
-			padding: 20px 15px;
 		}
 
 		.list {
-			height: calc(100% - 155px);
-			margin-bottom: 0;
 			overflow-y: auto;
 		}
 
