--- a/src/css/_variables/_main.scss
+++ b/src/css/_variables/_main.scss
@@ -6,12 +6,12 @@ $background-primary: #003adc;
 // $background-quaternary: #ffffff;
 // $background-quinary: #ffffff;
 // $background-senary: #ffffff;
-$foreground: #1e2849;
+$foreground: #212121;
 $foreground-negative: #ffffff;
-$foreground-primary: #475693;
+$foreground-primary: #003adc;
 // $foreground-secondary: #1e2849;
 // $foreground-tertiary: #1e2849;
 // $foreground-quaternary: #000000;
 // $foreground-quinary: #000000;
 // $foreground-senary: #000000;
-$border: #e4e4e6;
+$border: #212121;
