--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -121,6 +121,7 @@ button,
      -moz-appearance: none;
           appearance: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   /*
 	&:hover {
 		box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.15);
