--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -318,48 +318,49 @@ button,
     padding: 0;
     list-style: none; }
   .page--todomvc .list__item {
-    --accent: $foreground;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    min-height: 120px;
-    margin: 0;
-    padding: 20px; }
-    .page--todomvc .list__item .title {
-      position: relative;
-      margin-top: 10px;
-      font-size: 28px;
-      font-weight: 800;
-      line-height: 1;
-      text-align: left; }
-      .page--todomvc .list__item .title:after {
-        content: '';
-        background-color: black;
-        background-color: var(--accent);
-        background-size: 170px 8px;
-        background-repeat: no-repeat;
-        position: absolute;
-        width: 0;
-        height: 8px;
-        left: -8px;
-        top: 50%;
-        margin-top: -2px;
-        z-index: 1;
-        -webkit-transition: ease-in-out 300ms width;
-        transition: ease-in-out 300ms width; }
-    .page--todomvc .list__item.done .title:after {
+    margin: 0; }
+    .page--todomvc .list__item .content {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      min-height: 120px;
+      padding: 20px;
+      --accent: $foreground; }
+      .page--todomvc .list__item .content .title {
+        position: relative;
+        margin-top: 10px;
+        font-size: 28px;
+        font-weight: 800;
+        line-height: 1;
+        text-align: left; }
+        .page--todomvc .list__item .content .title:after {
+          content: '';
+          background-color: black;
+          background-color: var(--accent);
+          background-size: 170px 8px;
+          background-repeat: no-repeat;
+          position: absolute;
+          width: 0;
+          height: 8px;
+          left: -8px;
+          top: 50%;
+          margin-top: -2px;
+          z-index: 1;
+          -webkit-transition: ease-in-out 300ms width;
+          transition: ease-in-out 300ms width; }
+      .page--todomvc .list__item .content .date {
+        font-size: 10px;
+        font-weight: 800;
+        line-height: 1;
+        text-align: left;
+        white-space: nowrap;
+        text-transform: uppercase;
+        text-indent: 1px; }
+    .page--todomvc .list__item.done .content .title:after {
       width: 170px; }
-    .page--todomvc .list__item .date {
-      font-size: 10px;
-      font-weight: 800;
-      line-height: 1;
-      text-align: left;
-      white-space: nowrap;
-      text-transform: uppercase;
-      text-indent: 1px; }
   .page--todomvc .btn--toggle {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
